# python-fastapi-postgress-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2b3e44fb958d_email_tokens.py  3d1936683631_auth_fields_on_users.py  6244d4ddebbd_schema_v1_users_roles_user_roles_items.py  70c51cef1320_seed_roles_upsert.py  94736178f846_seed_roles.py
alembic_bak_1756359979/: env.py.bak
app/: config.py  db.py  deps.py  main.py  security.py
app/models/: __init__.py  item.py  role.py  token.py  user.py
app/routers/: admin.py  auth.py  items.py  users.py
app/schemas/: auth.py  item.py  user.py
app/services/: mailer.py
python_fastapi_postgres_boilerplate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
